--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,21 +6,24 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/img_logo"
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Login"
+        android:id="@+id/lbl_login"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_above="@+id/linearLayout" />
+        android:textSize="52sp" />
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/linearLayout">
+        android:id="@+id/linearLayout"
+        android:layout_below="@+id/lbl_login"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="false">
 
         <EditText
             android:layout_width="match_parent"
@@ -50,7 +53,8 @@
             android:layout_height="wrap_content"
             android:text="Register"
             android:id="@+id/btn_register"
-            android:layout_gravity="right" />
+            android:layout_gravity="right"
+            android:onClick="btn_register" />
 
         <Button
             android:layout_width="match_parent"
