--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,16 +17,11 @@
         android:layout_centerHorizontal="true"
         android:textSize="52sp" />
 
-    <LinearLayout
-        android:orientation="vertical"
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/lbl_main">
+        android:id="@+id/list_categories"
+        android:layout_gravity="center_horizontal"
+        android:layout_below="@+id/lbl_main" />
 
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/list_categories"
-            android:layout_gravity="center_horizontal" />
-    </LinearLayout>
 </RelativeLayout>
